config: updates build outputs in turbo.json to include 'dist/**' instead of '.next/**'

--- a/apps/webhook-cli/tsconfig.json
+++ b/apps/webhook-cli/tsconfig.json
@@ -2,7 +2,15 @@
   "extends": "@better-webhook/typescript-config/base.json",
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "src"
+    "rootDir": "src",
+    "declaration": true,
+    "declarationMap": false,
+    "allowJs": false,
+    "sourceMap": false,
+    "removeComments": false,
+    "allowSyntheticDefaultImports": true,
+    "allowImportingTsExtensions": false,
+    "noEmitOnError": true
   },
   "include": ["src"]
 }
