--- a/apps/webhook-cli/package.json
+++ b/apps/webhook-cli/package.json
@@ -1,14 +1,53 @@
 {
   "name": "@better-webhook/cli",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.2.0",
+  "description": "CLI for developing and replaying webhook payloads locally.",
   "type": "module",
   "bin": {
     "better-webhook": "dist/index.js"
   },
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
+  },
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "dev": "tsx src/index.ts"
+    "build": "tsup",
+    "dev": "tsup --watch",
+    "prepublishOnly": "pnpm run build",
+    "prepare": "pnpm run build"
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "keywords": [
+    "webhook",
+    "cli",
+    "developer-tools",
+    "testing",
+    "http"
+  ],
+  "license": "MIT",
+  "author": "Endalk <endalk200>",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/endalk200/better-webhook.git"
+  },
+  "bugs": {
+    "url": "https://github.com/endalk200/better-webhook/issues"
+  },
+  "homepage": "https://github.com/endalk200/better-webhook#readme",
+  "publishConfig": {
+    "access": "public"
+  },
+  "engines": {
+    "node": ">=18"
   },
   "dependencies": {
     "commander": "^14.0.1",
@@ -16,7 +55,9 @@
     "zod": "^4.1.8"
   },
   "devDependencies": {
+    "@better-webhook/typescript-config": "workspace:*",
     "@types/node": "^24.3.1",
+    "tsup": "^8.5.0",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3"
   }
