ref: reorganize utility based functions to utils module, refactor out configs and update build command

--- a/apps/webhook-cli/package.json
+++ b/apps/webhook-cli/package.json
@@ -16,8 +16,9 @@
     }
   },
   "scripts": {
-    "build": "tsup",
+    "build": "tsup --format cjs,esm --dts",
     "dev": "tsup --watch",
+    "lint": "tsc",
     "prepublishOnly": "pnpm run build",
     "prepare": "pnpm run build"
   },
