chore(webhook-cli): update TypeScript configuration and improve type imports across modules

--- a/apps/webhook-cli/tsconfig.json
+++ b/apps/webhook-cli/tsconfig.json
@@ -3,14 +3,16 @@
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": "src",
-    "declaration": true,
     "declarationMap": false,
     "allowJs": false,
     "sourceMap": false,
-    "removeComments": false,
+    "removeComments": true,
     "allowSyntheticDefaultImports": true,
     "allowImportingTsExtensions": false,
-    "noEmitOnError": true
+    "noEmitOnError": true,
+    "composite": false,
+    "incremental": false
   },
-  "include": ["src"]
+  "include": ["src/**/*"],
+  "exclude": ["dist", "node_modules"]
 }
