--- a/apps/webhook-cli/package.json
+++ b/apps/webhook-cli/package.json
@@ -52,12 +52,15 @@
   },
   "dependencies": {
     "commander": "^14.0.1",
+    "ora": "^9.0.0",
+    "prompts": "^2.4.2",
     "undici": "^7.16.0",
     "zod": "^4.1.8"
   },
   "devDependencies": {
     "@better-webhook/typescript-config": "workspace:*",
     "@types/node": "^24.3.1",
+    "@types/prompts": "^2.4.9",
     "tsup": "^8.5.0",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3"
