--- a/packages/nestjs/package.json
+++ b/packages/nestjs/package.json
@@ -18,6 +18,8 @@
     "dev": "tsup --watch",
     "lint": "tsc --noEmit",
     "check-types": "tsc --noEmit",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "clean": "rm -rf dist .turbo",
     "prepublishOnly": "pnpm run build"
   },
@@ -66,6 +68,8 @@
     "@types/node": "^24.3.1",
     "reflect-metadata": "^0.2.2",
     "tsup": "^8.5.0",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vitest": "^4.0.16",
+    "zod": "^4.0.0"
   }
 }
