--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@changesets/cli": "^2.27.9",
     "prettier": "^3.6.2",
     "turbo": "^2.5.6",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vitest": "^4.0.16"
   },
   "packageManager": "pnpm@9.0.0",
   "engines": {
