feat: integrate Ragie webhook support in examples
- Added @better-webhook/ragie dependency to Express, NestJS, and Next.js examples.
- Updated README files to include Ragie webhook integration details and environment variable configurations.
- Implemented Ragie webhook handlers in Express and NestJS examples, supporting multiple event types.
- Created a new Ragie webhook route in the Next.js example for handling various events.
- Enhanced documentation to reflect the new endpoints and usage instructions for Ragie webhooks.

--- a/apps/examples/express-example/package.json
+++ b/apps/examples/express-example/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@better-webhook/express": "workspace:*",
     "@better-webhook/github": "workspace:*",
+    "@better-webhook/ragie": "workspace:*",
     "express": "^4.21.2"
   },
   "devDependencies": {
