--- a/apps/examples/nestjs-example/package.json
+++ b/apps/examples/nestjs-example/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@better-webhook/github": "workspace:*",
     "@better-webhook/nestjs": "workspace:*",
+    "@better-webhook/ragie": "workspace:*",
     "@nestjs/common": "^11.0.0",
     "@nestjs/core": "^11.0.0",
     "@nestjs/platform-express": "^11.0.0",
