--- a/apps/examples/nextjs-example/package.json
+++ b/apps/examples/nextjs-example/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@better-webhook/github": "workspace:*",
     "@better-webhook/nextjs": "workspace:*",
+    "@better-webhook/ragie": "workspace:*",
     "next": "^15.5.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
