--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx,md}\" --cache",
+    "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx,md}\" --cache",
     "check-types": "turbo run check-types",
     "test": "turbo run test",
     "changeset": "changeset",
