feat: enhance observability in webhook examples with stats collectors
- Added `createWebhookStats()` and custom observers to Express, NestJS, and NextJS examples for improved tracking of webhook lifecycle events.
- Implemented stats endpoints in Express and NestJS examples to expose metrics such as total requests and processing durations.
- Updated logging in webhook handlers to include nonce for better tracking and idempotency.
- Enhanced documentation to reflect the new observability features and usage examples.

--- a/apps/examples/nestjs-example/package.json
+++ b/apps/examples/nestjs-example/package.json
@@ -10,6 +10,7 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@better-webhook/core": "workspace:*",
     "@better-webhook/github": "workspace:*",
     "@better-webhook/nestjs": "workspace:*",
     "@better-webhook/ragie": "workspace:*",
