--- a/apps/examples/express-example/package.json
+++ b/apps/examples/express-example/package.json
@@ -11,6 +11,7 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@better-webhook/core": "workspace:*",
     "@better-webhook/express": "workspace:*",
     "@better-webhook/github": "workspace:*",
     "@better-webhook/ragie": "workspace:*",
