--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@better-webhook/nextjs",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "description": "Next.js integration for better-webhook",
   "type": "module",
   "main": "dist/index.cjs",
@@ -57,12 +57,12 @@
     "@better-webhook/core": "workspace:*"
   },
   "peerDependencies": {
-    "next": "^13.0.0 || ^14.0.0 || ^15.0.0"
+    "next": "^13.0.0 || ^14.0.0 || ^15.0.0 || ^16.0.0"
   },
   "devDependencies": {
     "@better-webhook/typescript-config": "workspace:*",
     "@types/node": "^24.3.1",
-    "next": "^15.5.9",
+    "next": "^16.1.1",
     "tsup": "^8.5.0",
     "typescript": "^5.6.3",
     "vitest": "^4.0.16",
