fix: build script issue and path resolution issue

--- a/apps/webhook-cli/package.json
+++ b/apps/webhook-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@better-webhook/cli",
-  "version": "3.4.3",
+  "version": "3.4.4",
   "description": "Modern CLI for developing, capturing, and replaying webhooks locally with dashboard UI.",
   "type": "module",
   "bin": {
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "build:cli": "tsup --format cjs,esm --dts && node ./scripts/copy-dashboard.mjs",
-    "build": "pnpm --filter @better-webhook/dashboard build && pnpm run build:cli && node ./scripts/copy-dashboard.mjs",
+    "build": "pnpm --filter @better-webhook/dashboard build && pnpm run build:cli",
     "dev": "tsup --watch",
     "start": "tsx src/index.ts",
     "lint": "tsc",
