feat: update webhook event handling and configuration for Express and NestJS examples
- Refactored event handling in Express and NestJS examples to utilize imported event constants for better clarity and maintainability.
- Updated TypeScript configuration in NestJS example to support ES module syntax.
- Added missing `.js` extensions in import statements for NestJS example files.
- Enhanced event definitions for Ragie webhooks to include additional events and improve logging consistency.

--- a/apps/examples/nestjs-example/package.json
+++ b/apps/examples/nestjs-example/package.json
@@ -2,6 +2,7 @@
   "name": "@better-webhook/nestjs-example",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "description": "NestJS example for better-webhook",
   "scripts": {
     "dev": "nest start --watch",
