config: adds github action workflow for building and pushing new cli binaries

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,6 +48,6 @@ jobs:
           publish: pnpm release:publish
           title: "chore: release packages"
           commit: "chore: release packages"
-          createGithubReleases: true
+          createGithubReleases: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
