docs: adds homebrew and binary download instruction to docs

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,3 +51,6 @@ jobs:
           createGithubReleases: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Push tags
+        run: git push --tags
