chore: bump @better-webhook/cli version and add new dependency in turbo config

--- a/turbo.json
+++ b/turbo.json
@@ -16,7 +16,7 @@
       "inputs": ["$TURBO_DEFAULT$", "tsconfig*.json"]
     },
     "test": {
-      "dependsOn": ["^test"],
+      "dependsOn": ["^build", "^test"],
       "inputs": ["$TURBO_DEFAULT$", "jest.config.*", "vitest.config.*"]
     },
     "dev": {
