feat: enhance documentation and examples for Recall.ai integration, including new event handling and CLI commands

--- a/apps/examples/nestjs-example/package.json
+++ b/apps/examples/nestjs-example/package.json
@@ -14,6 +14,7 @@
     "@better-webhook/core": "workspace:*",
     "@better-webhook/github": "workspace:*",
     "@better-webhook/nestjs": "workspace:*",
+    "@better-webhook/recall": "workspace:*",
     "@better-webhook/ragie": "workspace:*",
     "@nestjs/common": "^11.0.0",
     "@nestjs/core": "^11.0.0",
