--- a/apps/examples/express-example/package.json
+++ b/apps/examples/express-example/package.json
@@ -14,6 +14,7 @@
     "@better-webhook/core": "workspace:*",
     "@better-webhook/express": "workspace:*",
     "@better-webhook/github": "workspace:*",
+    "@better-webhook/recall": "workspace:*",
     "@better-webhook/ragie": "workspace:*",
     "express": "^4.21.2"
   },
