--- a/apps/examples/hono-example/package.json
+++ b/apps/examples/hono-example/package.json
@@ -14,6 +14,7 @@
     "@better-webhook/core": "workspace:*",
     "@better-webhook/github": "workspace:*",
     "@better-webhook/hono": "workspace:*",
+    "@better-webhook/recall": "workspace:*",
     "@better-webhook/ragie": "workspace:*",
     "@hono/node-server": "^1.19.7",
     "hono": "^4.11.2"
