chore: add CHANGELOG.md for @better-webhook/recall package and update TypeScript configuration; modify external dependencies in tsup.config.ts and refine type checking in index.ts

--- a/packages/recall/tsconfig.json
+++ b/packages/recall/tsconfig.json
@@ -11,9 +11,7 @@
     "allowImportingTsExtensions": false,
     "noEmitOnError": true,
     "composite": false,
-    "incremental": false,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "incremental": false
   },
   "include": ["src/**/*"],
   "exclude": ["dist", "node_modules"]
