chore: update documentation for Code of Conduct reporting and enhance README structure; clarify deduplication strategies in examples and improve replay protection context handling

--- a/packages/hono/package.json
+++ b/packages/hono/package.json
@@ -52,6 +52,9 @@
   "dependencies": {
     "@better-webhook/core": "workspace:*"
   },
+  "engines": {
+    "node": ">=18"
+  },
   "peerDependencies": {
     "hono": "^4.0.0"
   },
