--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "dev:docs": "turbo run dev --filter=@better-webhook/docs",
     "build": "turbo run build",
     "lint": "turbo run lint",
-    "security:scan": "just security-scan",
-    "security:scan:blocking": "just security-scan-blocking",
-    "security:scan:sarif": "just security-scan-sarif",
-    "security:scan:secret": "just security-scan-secret",
-    "security:scan:sbom": "just security-scan-sbom",
-    "security:scan:license": "just security-scan-license",
+    "security:ensure:just": "node -e \"const {spawnSync}=require('node:child_process');const result=spawnSync('just',['--version'],{stdio:'ignore'});if(result.status!==0){console.error('Missing just command. Install Devbox (https://www.jetify.com/docs/devbox/installing-devbox/) and run devbox shell, or install just locally.');process.exit(1);}\"",
+    "security:scan": "pnpm security:ensure:just && just security-scan",
+    "security:scan:blocking": "pnpm security:ensure:just && just security-scan-blocking",
+    "security:scan:sarif": "pnpm security:ensure:just && just security-scan-sarif",
+    "security:scan:secret": "pnpm security:ensure:just && just security-scan-secret",
+    "security:scan:sbom": "pnpm security:ensure:just && just security-scan-sbom",
+    "security:scan:license": "pnpm security:ensure:just && just security-scan-license",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx,md}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx,md}\" --cache",
     "check-types": "turbo run check-types",
