--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,7 +45,7 @@ jobs:
           scan-type: fs
           scan-ref: .
           trivy-config: trivy.yaml
-          trivy-version: 0.69.0
+          version: 0.69.0
           format: table
           exit-code: 1
 
@@ -56,7 +56,7 @@ jobs:
           scan-type: fs
           scan-ref: .
           trivy-config: trivy.yaml
-          trivy-version: 0.69.0
+          version: 0.69.0
           format: table
           exit-code: 0
 
