--- a/packages/hono/package.json
+++ b/packages/hono/package.json
@@ -61,7 +61,7 @@
   "devDependencies": {
     "@better-webhook/typescript-config": "workspace:*",
     "@types/node": "^24.3.1",
-    "hono": "^4.0.0",
+    "hono": "4.11.4",
     "tsup": "^8.5.0",
     "typescript": "^5.6.3",
     "vitest": "^4.0.16",
