chore: standardize Trivy version format across workflows by updating version from '0.69.0' to 'v0.69.0' for consistency

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -30,7 +30,7 @@ jobs:
           scan-type: fs
           scan-ref: .
           trivy-config: trivy.yaml
-          version: 0.69.0
+          version: v0.69.0
           format: sarif
           output: trivy-results.sarif
           exit-code: 0
