--- a/.github/workflows/binary-release.yml
+++ b/.github/workflows/binary-release.yml
@@ -108,7 +108,7 @@ jobs:
           scan-ref: .
           cache: ${{ runner.os != 'Windows' }}
           trivy-config: trivy.yaml
-          version: 0.69.0
+          version: v0.69.0
           format: table
           scanners: vuln
           severity: HIGH,CRITICAL
@@ -123,7 +123,7 @@ jobs:
           scan-ref: .
           cache: ${{ runner.os != 'Windows' }}
           trivy-config: trivy.yaml
-          version: 0.69.0
+          version: v0.69.0
           format: table
           scanners: vuln
           severity: HIGH,CRITICAL
