--- a/apps/webhook-cli-go/turbo.json
+++ b/apps/webhook-cli-go/turbo.json
@@ -21,7 +21,7 @@
     },
     "clean": {
       "cache": false,
-      "outputs": ["bin/**", ".turbo/**"]
+      "outputs": ["bin/**"]
     }
   }
 }
